<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nameString" />

    <EditText
        android:id="@+id/pwEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:text="@string/pwString" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/submitString"
        android:textColor="#000000"
        app:backgroundTint="#818181" />

    <TextView
        android:id="@+id/noteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>