<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TP3_3b">

    <ImageView
        android:id="@+id/img3bImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="img_3b_axl_rose"
        app:srcCompat="@drawable/tp3_img2" />

    <TextView
        android:id="@+id/name3bTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Axl Rose" />

    <TextView
        android:id="@+id/cp3bTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ROSE62020611" />

    <TextView
        android:id="@+id/email3bTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="rosegun@gunsnroses.com" />

    <TextView
        android:id="@+id/ins3bTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notRegisteredString" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade3bTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradeString" />

        <EditText
            android:id="@+id/grade3bTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80px"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/back3bButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="back"
        android:text="@string/backListStrintg" />
</LinearLayout>